# online_cinema_fastapi

./: Dockerfile  README.MD  docker-compose-dev.yml  docker-compose-prod.yml  docker_logs.txt  pyproject.toml
.github/workflows/: main.yml
commands/: setup_mailhog_auth.sh
src/: main.py
src/config/: __init__.py  celery_app.py  dependencies.py  dependencies_auth.py  dependencies_stripe.py  order_config.py  payments_config.py  settings.py
src/database/: __init__.py
src/database/migrations/: env.py
src/database/migrations/versions/: 1599d27936d3_add_payment_model_and_paymentitem_model.py  2931f2465c0f_paymentmodel_and_paymentitemmodel.py  438100a5d72f_change_usermodel_i.py  48a7a642a582_change_order_and_orderitem_tables.py  6209f90ef650_change_nullable_for_cost_in_movie_model.py  7905f9efd42a_add_is_active_field.py  7f00834ba739_temp_migration.py  (+9 more)
src/database/models/: accounts.py  cart.py  movies.py  orders.py  payments.py
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: payment_confirmation.html
src/routes/: __init__.py  accounts.py  cart.py  movies.py  orders.py  payments.py  profiles.py
src/schemas/: __init__.py  cart.py  movies.py  orders.py  payments.py
src/services/: __init__.py  payment_service.py  payments_service.py
src/tasks/: cleanup_tasks.py  email_tasks.py
src/tests/: conftest.py  mocks.py
src/tests/test_e2e/: test_email_notification.py
src/tests/test_integration/: test_accounts.py  test_cart.py  test_movies.py  test_orders.py  test_payments.py
src/validation/: __init__.py  orders.py  payments.py
(+1 files in other folders)
